added some changes in index

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
       <section class="ac1">
         <h1>Seccion 1 - Ejemplo de Accesibilidad numero 1</h1>
         <p>Combinacion de Colores</p>
+        <p>background-color: #1A1A2E;
+          color:#DAA520;</p>
       </section>
       <section class="ac2">
-        Seccion 2 - Ejemplo de Accesibilidad numero 2
+        <h1>Seccion 2 - Ejemplo de Accesibilidad numero 2</h1>
+        <p>Pasa el raton por encima</p>
       </section>
       <section class="ac3">
-        Seccion 3 - Ejemplo de Accesibilidad numero 3
+        <h1>Seccion 3 - Ejemplo de Accesibilidad numero 3</h1>
       </section>
     </main>
     <footer class="foot">
