--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    
+
     <title>Document</title>
   </head>
   <body>
@@ -27,15 +27,16 @@
       <section class="ac1">
         <h1>Seccion 1 - Ejemplo de Accesibilidad numero 1</h1>
         <p>Combinacion de Colores</p>
-        <p>background-color: #1A1A2E;
-          color:#DAA520;</p>
+        <p>background-color: #1A1A2E; color:#DAA520;</p>
       </section>
       <section class="ac2">
         <h1>Seccion 2 - Ejemplo de Accesibilidad numero 2</h1>
-        <p>Pasa el raton por encima</p>
+        <p>Modo Oscuro Aumentado</p>
       </section>
       <section class="ac3">
         <h1>Seccion 3 - Ejemplo de Accesibilidad numero 3</h1>
+        <p>Los enlaces son muy buen ejemplo de accesibilidad a la web</p>
+        <a href="https://i.imgflip.com/32pr4x.gif">LSD</a>
       </section>
     </main>
     <footer class="foot">
