--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section class="ac3">
         <h1>Seccion 3 - Ejemplo de Accesibilidad numero 3</h1>
         <p>Los enlaces son muy buen ejemplo de accesibilidad a la web</p>
-        <a href="https://i.imgflip.com/32pr4x.gif">LSD</a>
+        <a href="assets/mariogif.gif">Ven a trabajar con Mario</a>
       </section>
     </main>
     <footer class="foot">
